Bug 498244 - Autocomplete tooltip rectangle outline is not closed on the right side
Summary: Autocomplete tooltip rectangle outline is not closed on the right side
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 24.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-04 11:49 UTC by leo5t
Modified: 2025-01-27 06:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Autocomplete tooltip (252.74 KB, image/jpeg)
2025-01-04 11:49 UTC, leo5t
Details

Note You need to log in before you can comment on or make changes to this bug.
Description leo5t 2025-01-04 11:49:17 UTC
Created attachment 177101 [details]
Autocomplete tooltip

SUMMARY
The outline of the autocomplete tooltip is not closed on the right side

STEPS TO REPRODUCE
Press ALT+SPACE to open the autocomplete tooltip

OBSERVED RESULT
It is missing a vertical line on the right side of the rectangle

EXPECTED RESULT
To see a closed outline

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Kernel Version: 6.12.7-arch1-1 (64-bit)
Graphics Platform: X11
Graphics Processor: GeForce GT 440/PCIe/SSE2
Comment 1 Christoph Cullmann 2025-01-04 17:06:34 UTC
Can reproduce that with current master on wayland.
Comment 2 Christoph Cullmann 2025-01-04 17:18:43 UTC
Looks like a resizing issue, with Fusion style it happens, too, but there is even more of the scrollbar hidden.
Comment 3 Christoph Cullmann 2025-01-10 21:49:54 UTC
Played a bit with it, but so far got not rid of that issue.
Comment 4 leo5t 2025-01-25 16:55:30 UTC
Could give me a hint where to look in the sources?
Comment 5 Bug Janitor Service 2025-01-26 23:43:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/779
Comment 6 leo5t 2025-01-27 06:04:54 UTC
Git commit ae6a4a9dc80af8ecad920a254cec2f2b6992e78e by Leo Ruggeri.
Committed on 26/01/2025 at 23:51.
Pushed by waqar into branch 'master'.

Fix KateCompletionTree width

Also take parent frame width into account

M  +1    -1    src/completion/katecompletiontree.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/ae6a4a9dc80af8ecad920a254cec2f2b6992e78e