Fix KateCompletionTree width

Also take parent frame width into account

BUG: 498244